--- a/src/pug/base/row.pug
+++ b/src/pug/base/row.pug
@@ -27,4 +27,4 @@ form.table-row__col.table-row__col_category.box-shadow.border-radius.p-3(action=
       .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
       button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
     .text-center.text-md-left
-      button.btn.text-uppercase.px-3(type="submit") В корзину
+      button.button.text-uppercase.px-3(type="submit") В корзину
