--- a/src/pug/base/subscribe.pug
+++ b/src/pug/base/subscribe.pug
@@ -7,6 +7,6 @@
         .form__item.mb-4
           input.form__field(type="text" value="")
           label.form__label.form__label_title e-mail
-        button.btn.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
+        button.button.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
         .h6 Нажимая “Подписаться” вы принимаете условия&nbsp;
           a.color-theme-brand(href="#") Политики конфиденциальности
