--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -40,7 +40,7 @@ block wrapper
         .aside__wrapper
           .section.section_filter.bg-theme-white.py-0.mb-lg-3
             .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
-              button.btn.btn_nobg.h4.p-0(type="button")
+              button.button.button_nobg.h4.p-0(type="button")
                 +icon('settings','color-theme-brand h3 mr-2')
                 span.color-theme-brand Подобрать по VIN
               span.section__readmore.readmore.d-none.d-lg-block.color-theme-brand
@@ -79,7 +79,7 @@ block wrapper
                   .col-xl-7.mb-3.mb-xl-0
                     .h6.color-theme-disabled *-поля обязательные для заполнения
                   .col-xl-5.d-flex.justify-content-xl-end
-                    button.btn.text-uppercase.px-5(type="submit") Отправить запрос
+                    button.button.text-uppercase.px-5(type="submit") Отправить запрос
 
       .category.category_wide.mb-3
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -103,7 +103,7 @@ block wrapper
               a.d-block.h6.color-theme-brand.mb-2(href="#") Регуляторы
               a.d-block.h6.color-theme-brand.mb-2(href="#") Датчики и предохранители
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -119,7 +119,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
               a.d-block.h6.mb-2(href="#") RUSEFF Полироль для шин ЧЕРНИТЕЛЬ ШИН. 0.5 л
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -135,7 +135,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Авточехол Автопилот из экокожи Стандарт для SKO
               a.d-block.h6.mb-2(href="#") Авточехол Автопилот из экокожи Ромб для HYUNDAI
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -152,7 +152,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
               a.d-block.h6.mb-2(href="#") Дополнительная камера
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -169,7 +169,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Lemforder 3126001 Подшипник опоры
               a.d-block.h6.mb-2(href="#") АМОРТИЗАТОР HYUNDAI
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -185,7 +185,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX ORGASM TESTER
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX ON BOARD
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -201,7 +201,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
               a.d-block.h6.mb-2(href="#") RUSEFF Полироль для шин ЧЕРНИТЕЛЬ ШИН. 0.5 л
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -218,7 +218,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
               a.d-block.h6.mb-2(href="#") Дополнительная камера
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -236,7 +236,7 @@ block wrapper
               a.d-block.h6.color-theme-brand.mb-2(href="#") Регуляторы
               a.d-block.h6.color-theme-brand.mb-2(href="#") Датчики и предохранители
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -252,7 +252,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
               a.d-block.h6.mb-2(href="#") RUSEFF Полироль для шин ЧЕРНИТЕЛЬ ШИН. 0.5 л
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -269,7 +269,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Lemforder 3126001 Подшипник опоры
               a.d-block.h6.mb-2(href="#") АМОРТИЗАТОР HYUNDAI
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -286,7 +286,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
               a.d-block.h6.mb-2(href="#") Дополнительная камера
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -302,7 +302,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX ORGASM TESTER
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX ON BOARD
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -319,7 +319,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Lemforder 3126001 Подшипник опоры
               a.d-block.h6.mb-2(href="#") АМОРТИЗАТОР HYUNDAI
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -335,7 +335,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX ORGASM TESTER
               a.d-block.h6.mb-2(href="#") Ароматизатор подвесной CONTEX SEX ON BOARD
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -351,7 +351,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") SAA-0781 Ароматизатор подвесной For him (paper)
               a.d-block.h6.mb-2(href="#") RUSEFF Полироль для шин ЧЕРНИТЕЛЬ ШИН. 0.5 л
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -368,7 +368,7 @@ block wrapper
               a.d-block.h6.mb-2(href="#") Видеорегистратор с радар-детектором Playme ALPHA
               a.d-block.h6.mb-2(href="#") Дополнительная камера
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
         .product-list.d-flex.flex-column.border-radius.text-center.text-md-left.p-2.p-md-3.mb-3
@@ -386,7 +386,7 @@ block wrapper
               a.d-block.h6.color-theme-brand.mb-2(href="#") Регуляторы
               a.d-block.h6.color-theme-brand.mb-2(href="#") Датчики и предохранители
             .product-list__footer.text-center
-              button.btn.btn_nobg.h-auto.p-0(type="button")
+              button.button.button_nobg.h-auto.p-0(type="button")
                 +icon('readmore','h3 color-theme-disabled')
 
       include category/popular.pug
