--- a/src/pug/category/popular.pug
+++ b/src/pug/category/popular.pug
@@ -30,7 +30,7 @@
       li.nav-item.swiper-slide(role="presentation")
         a.toggler.nav-link.py-2(data-toggle="tab" href="#tab-pane-12" role="tab" aria-controls="tab-pane-12" aria-selected="true") Акции
   .tab-content.mb-5
-    #tab-pane-1.tab-pane.d-block.fade.show.active(role="tabpanel")
+    #tab-pane-1.tab-pane.d-block.overflow-hidden.fade.show.active(role="tabpanel")
       .slides.slides_grid.swiper-container.pt-1.pb-4
         +slidesNav
         .swiper-wrapper
@@ -56,7 +56,7 @@
             +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_sm d-flex')
           .swiper-slide
             +card('','14 000','Шины Yokohama Ice Guard IG55 215/55 R17 98T','',false,false,false,false,false,false,false,true,'card_sm d-flex')
-    #tab-pane-2.tab-pane.fade.show(role="tabpanel")
+    #tab-pane-2.tab-pane.d-block.overflow-hidden.fade.show(role="tabpanel")
       .slides.slides_grid.swiper-container.pt-1.pb-4
         +slidesNav
         .swiper-wrapper
@@ -82,5 +82,5 @@
             +card('','','Зимние шины Yokohama Ice','',false,false,false,false,false,true,true,true,'card_sm d-flex')
           .swiper-slide
             +card('','14 000','Шины Yokohama Ice Guard IG55 215/55 R17 98T','',false,false,false,false,false,false,false,true,'card_sm d-flex')
-    #tab-pane-3.tab-pane.fade.show(role="tabpanel")
-    #tab-pane-4.tab-pane.fade.show(role="tabpanel")
+    #tab-pane-3.tab-pane.d-block.overflow-hidden.fade.show(role="tabpanel")
+    #tab-pane-4.tab-pane.d-block.overflow-hidden.fade.show(role="tabpanel")
