--- a/src/pug/checkout__customer.pug
+++ b/src/pug/checkout__customer.pug
@@ -9,7 +9,7 @@ block checkout
       span.section-counter.h4.rounded-circle.bg-theme-brand.color-theme-white.mr-2
         +icon('checked','color-theme-white')
       .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
-      button.btn.btn_nobg.h5.h-auto.p-0(type="button")
+      button.button.button_nobg.h5.h-auto.p-0(type="button")
         +icon('edit','h3 color-theme-brand mr-sm-2')
         .d-none.d-sm-block Изменить
   form.section.py-0.mb-3(action="#")
@@ -29,7 +29,7 @@ block checkout
         .form__label.form__label_title E-mail*
     .d-flex.align-items-end.justify-content-between.px-md-4.px-3.py-3
       span.h6 *-поля обязательные для заполнения
-      button.btn.text-uppercase.px-5(type="button") Далее
+      button.button.text-uppercase.px-5(type="button") Далее
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
       span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 3
