--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -178,4 +178,4 @@ block wrapper
               | условия&nbsp;
               a.color-theme-brand(href="#") Политики конфиденциальности
           .d-flex.justify-content-lg-end.justify-content-center.col-xl-3.col-lg-4
-            button.btn.text-uppercase.px-5(type="submit") отправить
+            button.button.text-uppercase.px-5(type="submit") отправить
