--- a/src/pug/personal-orders.pug
+++ b/src/pug/personal-orders.pug
@@ -107,7 +107,7 @@ block personal
                   +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2 pointer-events-none')
                   span.contacts__item-title Следить в Telegram
               .col-xl-5.d-flex.justify-content-xl-end
-                button.btn.btn_nobg.h5.p-0(type="button")
+                button.button.button_nobg.h5.p-0(type="button")
                   +icon('trash','btn__icon h3 color-theme-brand mr-2 pointer-events-none')
                   | Отменить запись
 
