--- a/src/pug/personal-pwd.pug
+++ b/src/pug/personal-pwd.pug
@@ -27,4 +27,4 @@ block personal
         | буквенная часть пароля должна содержать как строчные, так и прописные (заглавные) буквы.
     .px-lg-5.px-md-4.px-3.pb-3
       .d-flex.justify-content-md-end.justify-content-center
-        button.btn.text-uppercase.px-5(type="submit") Изменить пароль
+        button.button.text-uppercase.px-5(type="submit") Изменить пароль
