--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -25,10 +25,10 @@ block profile
           .mb-5
             a.h5.theme-hover.d-inline-block.mr-3(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
           .d-flex.align-items-center.justify-content-between
-            button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
+            button.popup__close.button.button_nobg.text-left.px-0(type="button") Продолжить
               br
               | покупки
-            button.btn.text-uppercase(type="button") Сравнить
+            button.button.text-uppercase(type="button") Сравнить
     .pos-rel.col-lg-3
       a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap(href="#")
         span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
@@ -39,8 +39,8 @@ block profile
         .bg-theme-white.border-radius.overflow-hidden.zi-2.pt-4.pb-3.px-4
           .h5.color-theme-brand.mb-2 Выберете свой автомобиль и поиск товаров на сайте станет значительно проще.
           .d-flex.align-items-center.justify-content-between
-            button.popup__close.btn.btn_nobg.px-0(type="button") Позже
-            a.btn.font-weight-bold.px-3(href="#") ОК
+            button.popup__close.button.button_nobg.px-0(type="button") Позже
+            a.button.font-weight-bold.px-3(href="#") ОК
     .pos-rel.col-lg-3
       a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap(href="#")
         span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
@@ -51,7 +51,7 @@ block profile
         form.bg-theme-white.border-radius.overflow-hidden.zi-2.px-4.py-3(action="#")
           .d-flex.align-items-center.justify-content-between.mb-4
             .h3.font-weight-bold.color-theme-brand.mr-3 Что с моим заказом?
-            button.popup__close.btn-unstyled.rounded-circle.bg-theme-white(type="button")
+            button.popup__close.button-unstyled.rounded-circle.bg-theme-white(type="button")
               +icon('close','h3 color-theme-brand')
           .mb-5
             .form__item.mb-4
@@ -61,7 +61,7 @@ block profile
               input.form__field(type="text" value="")
               label.form__label.form__label_title +7 (___) ___-__-__
           .d-flex.align-items-center.justify-content-end
-            button.btn.text-uppercase(type="submit") Отправить
+            button.button.text-uppercase(type="submit") Отправить
     .pos-rel.col-lg-3
       .header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap
         .d-flex.align-items-center.justify-content-center
@@ -71,7 +71,7 @@ block profile
             span.font-weight-bold.mr-1 300
             | Б.₽.
         .d-flex.justify-content-center
-          a.header__btn-title.btn-unstyled(href="#") Сергей | выход
+          a.header__btn-title.button-unstyled(href="#") Сергей | выход
   .pos-rel
     .d-flex.align-items-center.justify-content-center
       button.header__btn.header__btn_type_cart-holder.header__btn_inverse(type="button" data-target="#cart")
@@ -94,13 +94,13 @@ block profile
         .mb-5
           a.h5.theme-hover.d-inline-block.mr-3(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
         .d-flex.align-items-center.justify-content-between
-          button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
+          button.popup__close.button.button_nobg.text-left.px-0(type="button") Продолжить
             br
             | покупки
-          button.btn.text-uppercase(type="button") В избранное
+          button.button.text-uppercase(type="button") В избранное
     .popup.popup_width_lg.popup_pos_right.box-shadow.border-radius.d-block
       .popup__triangle.bg-theme-white.box-shadow
-      button.popup__close.popup__close_type_btn.btn-unstyled.rounded-circle.bg-theme-white(type="button")
+      button.popup__close.popup__close_type_btn.button-unstyled.rounded-circle.bg-theme-white(type="button")
         +icon('close','h3 color-theme-brand')
       .bg-theme-white.border-radius.overflow-hidden.zi-2
         .popup__content
@@ -122,10 +122,10 @@ block profile
                     .font-weight-bold.text-nowrap.mr-1 7 337.12
                     | ₽
             .d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-sm-between
-              button.popup__close.btn.btn_nobg.h4.mb-2.mb-sm-0.px-3.px-0.py-0(type="button")
+              button.popup__close.button.button_nobg.h4.mb-2.mb-sm-0.px-3.px-0.py-0(type="button")
                 +icon('continue','h3 color-theme-brand mr-2')
                 span.h5.pointer-events-none Продолжить покупки
-              a.btn.text-uppercase(href="#") Перейти в корзину
+              a.button.text-uppercase(href="#") Перейти в корзину
           .pt-4.px-4.pb-3
             .h4.mb-3 Рекомендуем
             .slides.slides_carousel.swiper-container.pt-1.pb-3
@@ -148,7 +148,7 @@ block profile
                             .card__price
                               span.card__price-value 7 337.12
                               | ₽
-                          a.btn.text-uppercase(href="#") В корзину
+                          a.button.text-uppercase(href="#") В корзину
     #cart.popup.popup_width_lg.popup_pos_right.box-shadow.border-radius
       .popup__triangle.bg-theme-white.box-shadow
       .bg-theme-white.border-radius.overflow-hidden.zi-2
@@ -202,10 +202,10 @@ block profile
                   .font-weight-bold.text-nowrap.mr-1 7 337.12
                   | ₽
             .d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-sm-between
-              button.popup__close.btn.btn_nobg.h4.mb-2.mb-sm-0.px-3.px-0.py-0(type="button")
+              button.popup__close.button.button_nobg.h4.mb-2.mb-sm-0.px-3.px-0.py-0(type="button")
                 +icon('continue','h3 color-theme-brand mr-2')
                 span.h5.pointer-events-none Продолжить покупки
-              a.btn.text-uppercase(href="#") Перейти в корзину
+              a.button.text-uppercase(href="#") Перейти в корзину
           .pt-4.px-4.pb-3
             .h4.mb-3 Рекомендуем
             .slides.slides_carousel.swiper-container.pt-1.pb-3
@@ -227,7 +227,7 @@ block profile
                             .card__price
                               span.card__price-value 7 337.12
                               | ₽
-                          a.btn.text-uppercase(href="#") В корзину
+                          a.button.text-uppercase(href="#") В корзину
 
 block personal
   .h2.font-weight-bold.text-center.mb-4 #{title}
@@ -258,4 +258,4 @@ block personal
             .form__label.form__label_title Дом
     .px-lg-5.px-md-4.px-3.pb-3
       .d-flex.justify-content-md-end.justify-content-center
-        button.btn.text-uppercase.px-sm-5.px-3(type="submit") сохранить изменения
+        button.button.text-uppercase.px-sm-5.px-3(type="submit") сохранить изменения
