--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -43,7 +43,7 @@ block wrapper
           .col-md-4.px-0.mb-2.mb-md-0
             .h2.font-weight-bold Нет в наличии
           .col-md-8
-            button.btn.h4.text-uppercase(type="button" data-toggle="modal" data-target="#alert")
+            button.button.h4.text-uppercase(type="button" data-toggle="modal" data-target="#alert")
               +icon('phonehandset','h3 color-theme-white mr-2')
               span сообщить,
                 span.d-block.d-sm-inline когда появится
@@ -69,13 +69,13 @@ block wrapper
                   button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
                   .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
                   button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
-              button.btn.text-uppercase.px-3.mr-sm-4(type="submit") В корзину
+              button.button.text-uppercase.px-3.mr-sm-4(type="submit") В корзину
             .col-xl-3.col-md-4.col-sm-6.text-center.text-sm-left
-              button.btn.btn_nobg.h5.p-0(type="button")
+              button.button.button_nobg.h5.p-0(type="button")
                 +icon('plane','h3 color-theme-brand mr-2')
                 | Купить в один клик
             .col-xl-3.col-md-4.col-sm-6.text-center.text-sm-left
-              button.btn.btn_nobg.h5.p-0(type="button")
+              button.button.button_nobg.h5.p-0(type="button")
                 +icon('card','h3 color-theme-brand mr-2')
                 | В кредит
           .row
@@ -143,13 +143,13 @@ block wrapper
                 p Цена указана при покупке от 4 шт. за наличный расчет. Минимальный заказ 4 шт., меньшее количество можно приобрести только по согласованию с менеджером и 100% предоплате.
                 p Остатки товара на складе меняются, о точном наличии товара и ценах уточняйте у менеджера.
               .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.justify-content-between
-                button.btn.btn_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
+                button.button.button_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
                   +icon('share','h3 color-theme-brand mr-2')
                   | Рассказать друзьям
-                button.btn.btn_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
+                button.button.button_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
                   +icon('compare','h3 color-theme-brand mr-2')
                   | Сравнить
-                button.btn.btn_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
+                button.button.button_nobg.h5.p-0.mb-2.mb-sm-0(type="button")
                   +icon('favourite','h3 color-theme-brand mr-2')
                   | В избранное
     .tabs.mb-5
@@ -182,7 +182,7 @@ block wrapper
               .embed-responsive.embed-responsive-16by9.mb-3
                 iframe.embed-responsive-item(src="https://www.youtube.com/embed/_4rN_sP9DHU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
               .d-flex.flex-sm-wrap.flex-column.flex-sm-row.align-items-center.justify-content-between
-                button.btn.btn_nobg.h5.p-0(type="button")
+                button.button.button_nobg.h5.p-0(type="button")
                   +icon('share','h3 color-theme-brand mr-2')
                   | Рассказать друзьям
                 a.readmore.d-flex.align-items-center(href="#")
@@ -276,7 +276,7 @@ block wrapper
       .modal-content.border-0.box-shadow.pt-3.pb-4
         .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
           .h3.font-weight-bold.color-theme-brand.mr-3 Товара нет в наличии
-          button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
           .h5.mb-4 Оставьте свой номер телефона и мы сообщим, когда данный товар  появится в нашем магазине. Так же вы может получать уведомления через мессенджеры.
@@ -292,7 +292,7 @@ block wrapper
               +icon('tg-filled','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title Сообщить в Telegram
         .text-center.px-4
-          button.btn.text-uppercase.px-4.mb-3(type="submit") Сообщить мне
+          button.button.text-uppercase.px-4.mb-3(type="submit") Сообщить мне
           .h6 Нажимая кнопку “Сообщить мне”
             br
             | вы соглашаетесь с нашей
