--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -30,7 +30,7 @@ block wrapper
               br
               | запишитесь прямо сейчас:
         .promo__footer
-          button.btn.text-uppercase(type="button") Записаться онлайн
+          button.button.text-uppercase(type="button") Записаться онлайн
 
   .wrapper
     .section.px-lg-0.px-3.mb-5
