--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -44,7 +44,7 @@ block wrapper
           form.form.row.justify-content-end.mb-4(action="#")
             .col-xl-3.col-md-4.col-sm-7
               .form__select
-                select.custom-select
+                select.selecter
                   option По умолчанию
                   option По возрастанию цены
                   option По убыванию цены
