--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -79,7 +79,7 @@ header.header
                     +img('content/banners/banner-1.jpg','img-cover')
                     .banner__inner.d-flex.flex-column.align-items-start.justify-content-between.p-4
                       .banner__title.h2.font-weight-bold.color-theme-brand Запись на шиномонтаж онлайн
-                      a.btn.text-uppercase(href="#") Записаться
+                      a.button.text-uppercase(href="#") Записаться
 
           #categories.panel__wrapper
             button.panel__close.d-flex.align-items-center.d-xl-none.bg-theme-brand.color-theme-white(type="button")
@@ -152,7 +152,7 @@ header.header
                       +img('content/banners/banner-2.jpg','img-cover')
                       .banner__inner.p-4.d-flex.flex-column.align-items-center.justify-content-between
                         .banner__title.h2.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
-                        a.btn.text-uppercase(href="#") Подобрать
+                        a.button.text-uppercase(href="#") Подобрать
                 #moto.panel__grid.col-xl-10
                   .panel__content.px-xl-4
                     .h4.mb-4.d-none.d-xl-block Производители мотошин:
@@ -179,7 +179,7 @@ header.header
                       +img('content/banners/banner-2.jpg','img-cover')
                       .banner__inner.p-4.d-flex.flex-column.align-items-center.justify-content-between
                         .banner__title.h2.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
-                        a.btn.text-uppercase(href="#") Подобрать
+                        a.button.text-uppercase(href="#") Подобрать
                 #wheels.panel__grid.col-xl-10
                   .panel__content.px-xl-4
                     .h4.mb-4.d-none.d-xl-block Производители дисков
@@ -312,8 +312,8 @@ header.header
                 .header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
                   +icon('user')
                 .d-flex.justify-content-center
-                  button.theme-hover.d-none.d-lg-block.btn-unstyled(type="button" data-toggle="modal" data-target="#auth") Вход |
-                  button.header__btn-title.btn-unstyled(type="button" data-toggle="modal" data-target="#reg")  регистрация
+                  button.theme-hover.d-none.d-lg-block.button-unstyled(type="button" data-toggle="modal" data-target="#auth") Вход |
+                  button.header__btn-title.button-unstyled(type="button" data-toggle="modal" data-target="#reg")  регистрация
           .pos-rel
             a.header__btn.header__btn_inverse(href="#")
               +icon('cart','header__btn-icon d-block')
