--- a/src/pug/ui.pug
+++ b/src/pug/ui.pug
@@ -79,28 +79,28 @@ block wrapper
   .pt-4.pb-3.px-5.border-bottom
     p.h2.mb-4 Кнопки
     .mb-3
-      button.btn(type="button") Кнопка со стилями по умолчанию
+      button.button(type="button") Кнопка со стилями по умолчанию
     .mb-3
-      button.btn(type="button")
+      button.button(type="button")
         +icon('trash','btn__icon h3 mr-2')
         | Кнопка с иконкой
     .mb-3
-      button.btn.btn_nobg(type="button")
+      button.button.button_nobg(type="button")
         +icon('trash','btn__icon h3 color-theme-brand mr-2')
         | Кнопка без фона с иконкой
     .mb-3
-      button.btn.btn_nobg(type="button") Кнопка без фона
+      button.button.button_nobg(type="button") Кнопка без фона
     .mb-3
-      button.btn-unstyled(type="button") Кнопка (стиль ссылки)
+      button.button-unstyled(type="button") Кнопка (стиль ссылки)
     .mb-3
-      button.btn.text-uppercase(type="button") .text-uppercase
+      button.button.text-uppercase(type="button") .text-uppercase
     .mb-3
-      button.btn.bg-theme-disabled(type="button") .bg-theme-disabled
+      button.button.bg-theme-disabled(type="button") .bg-theme-disabled
     .mb-3
-      button.btn.color-theme-light(type="button") .color-theme-light
+      button.button.color-theme-light(type="button") .color-theme-light
     .mb-3
-      button.btn.py-4.px-5(type="button") .py-4.px-5
+      button.button.py-4.px-5(type="button") .py-4.px-5
     .mb-3
-      button.btn.w-100(type="button") Ширина 100%
+      button.button.w-100(type="button") Ширина 100%
 
 block footer
