--- a/src/pug/ui_modals.pug
+++ b/src/pug/ui_modals.pug
@@ -30,7 +30,7 @@ block footer
         +svg('settings','modal__bg')
         .modal-header.d-flex.align-items-center.justify-content-between.border-0.zi-2.p-0.mb-4
           .h3.font-weight-bold.color-theme-brand.mr-3 Ваш запрос на подбор по VIN успешно отправлен
-          button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.zi-2.p-0.mb-4
           .h4.mb-3 Ваша заявка №49409 от 07.06.2021 (16:37:23) успешно оформлена и будет обработана в ближайшее время.
@@ -46,7 +46,7 @@ block footer
               +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
               span.contacts__item-title Продолжить в WhatsApp
           .col-xl-2.d-flex.justify-content-xl-end
-            button.btn.text-uppercse.px-4(type="button" data-dismiss="modal") OK
+            button.button.text-uppercse.px-4(type="button" data-dismiss="modal") OK
 
   .modal.fade#order-success(tabindex="-1" aria-hidden="true")
     .modal-dialog.modal-dialog_lg
@@ -54,7 +54,7 @@ block footer
         +svg('checked-double','modal__bg modal__bg_checked')
         .modal-header.d-flex.align-items-center.justify-content-between.pt-0.px-4.pb-3.mb-4
           .h3.font-weight-bold.color-theme-brand.mr-3 Заказ успешно оформлен
-          button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.border-bottom.pt-0.px-4.pb-3.mb-3.zi-2
           .h5.mb-4 Ваш заказ успешно оформлен и будет обработан в ближайшее время. С вами свяжется менеджер для его подтверждения.
@@ -79,7 +79,7 @@ block footer
                 +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
                 span.contacts__item-title Следить в WhatsApp
             .col-xl-2.d-flex.justify-content-xl-end
-              button.btn.text-uppercse.px-4(type="button" data-dismiss="modal") OK
+              button.button.text-uppercse.px-4(type="button" data-dismiss="modal") OK
 
   .modal.fade#booking-success(tabindex="-1" aria-hidden="true")
     .modal-dialog.modal-dialog_lg
@@ -87,7 +87,7 @@ block footer
         +svg('checked-double','modal__bg modal__bg_checked')
         .modal-header.d-flex.align-items-center.justify-content-between.border-0.py-0.px-4.mb-4
           .h3.font-weight-bold.color-theme-brand.mr-3 Запись на шиномонтаж успешно оформлена. Ждем вас в назначенное время.
-          button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+          button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
             +icon('close')
         .modal-body.border-bottom.pt-0.px-4.pb-3.mb-3.zi-2
           .desclist
@@ -114,4 +114,4 @@ block footer
                 +icon('wapp-filled','contacts__icon h3 color-theme-brand mr-2')
                 span.contacts__item-title Следить в WhatsApp
             .col-xl-2.d-flex.justify-content-xl-end
-              button.btn.text-uppercse.px-4(type="button" data-dismiss="modal") OK
+              button.button.text-uppercse.px-4(type="button" data-dismiss="modal") OK
