--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -134,7 +134,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
               .d-flex.align-items-center
                 +icon('user','color-theme-brand h3 mr-2')
                 .h3.font-weight-bold.color-theme-brand.mr-3 Регистрация
-              button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+              button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
                 +icon('close')
             .modal-body.border-bottom.pt-0.px-4.pb-3.mb-3
               .form
@@ -153,7 +153,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
                 .form__item
                   input#reg__confidential.form__toggler.form__toggler_checkbox(type="checkbox" value="" name="reg__confidential")
                   label#reg__confidential-error.error(for="reg__confidential") Необходимо принять условия политики конфидециальности
-                  label.form__label.form__label_checkbox(for="reg__confidential")
+                  label.form__label.h5(for="reg__confidential")
                     +icon('checked','form__label-icon')
                     span.form__label-title Я принимаю&nbsp;
                       a.text-underline(href="#") политику конфиденциальности&nbsp;
@@ -163,7 +163,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
                 .col-xl-5.text-xl-left.text-center.mb-xl-0.mb-3
                   .h6 *-поля обязательные для заполнения
                 .col-xl-7.text-xl-right.text-center
-                  button.btn.text-uppercase.px-3(type="submit") Зарегистрироваться
+                  button.button.text-uppercase.px-3(type="submit") Зарегистрироваться
 
       .modal.fade#auth(tabindex="-1" aria-hidden="true")
         form#form-login.modal-dialog(action="#")
@@ -172,7 +172,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
               .d-flex.align-items-center
                 +icon('user','color-theme-brand h3 mr-2')
                 .h3.font-weight-bold.color-theme-brand.mr-3 Вход
-              button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+              button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
                 +icon('close')
             .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
               .form.mb-4
@@ -186,7 +186,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
                 a.h5(href="#" data-dismiss="modal" data-toggle="modal" data-target="#pwd") Забыли пароль?
                 a.h5(href="#" data-dismiss="modal" data-toggle="modal" data-target="#reg") Регистрация
             .text-center.px-4
-              button.btn.text-uppercase.px-5(type="submit") Вход
+              button.button.text-uppercase.px-5(type="submit") Вход
 
       .modal.fade#pwd(tabindex="-1" aria-hidden="true")
         form.modal-dialog(action="#")
@@ -195,7 +195,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
               .d-flex.align-items-center
                 +icon('user','color-theme-brand h3 mr-2')
                 .h3.font-weight-bold.color-theme-brand.mr-3 Забыли пароль?
-              button.close.h2.btn-unstyled.color-theme-brand.py-0(data-dismiss="modal")
+              button.close.h2.button-unstyled.color-theme-brand.py-0(data-dismiss="modal")
                 +icon('close')
             .modal-body.border-bottom.pt-0.px-4.pb-2.mb-3
               .h5.text-center.mb-3 Укажите ваш телефон, и мы отправим&nbsp;
@@ -208,7 +208,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
               .d-flex.flex-wrap.align-items-center.justify-content-end
                 a.h5(href="#" data-dismiss="modal" data-toggle="modal" data-target="#reg") Регистрация
             .text-center.px-4
-              button.btn.text-uppercase.px-5(type="submit") Отправить
+              button.button.text-uppercase.px-5(type="submit") Отправить
 
     block popups
 
@@ -222,6 +222,7 @@ html(lang="ru" itemscope itemtype="http://schema.org/WebPage")
     script(src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js")
     script(src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js")
 
 //-
     + pug/tile - товары и баннеры в плитке на стр. результатов results-tires.html http://dl3.joxi.net/drive/2021/11/04/0050/2358/3311926/26/d2900e3683.jpg
