--- a/src/pug/base/callorder.pug
+++ b/src/pug/base/callorder.pug
@@ -8,6 +8,6 @@
         .form__item.mb-4
           input.form__field.input-phone(type="text" value="")
           label.form__label.form__label_title +7 (_ _ _) _ _ _-_ _-_ _
-        button.btn.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
+        button.button.text-uppercase.px-4.mb-3(type="submit") перезвонить мне
         .h6 Нажимая “Подписаться” вы принимаете условия&nbsp;
           a.color-theme-brand(href="#") Политики конфиденциальности
