--- a/src/pug/base/filter-details.pug
+++ b/src/pug/base/filter-details.pug
@@ -9,14 +9,14 @@
             +icon('readmore','h3 color-theme-brand')
       .form__section.pt-2.pb-3
         .h4.color-theme-brand.mb-1 Подбор авточехлов
-        button.btn-unstyled.h6(type="reset") Сбросить
+        button.button-unstyled.h6(type="reset") Сбросить
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Применяемость
         .row
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Марка авто
-              select.custom-select
+              select.selecter
                 option --
                 option ACURA
                 option ALFA ROMEO
@@ -27,7 +27,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Модель
-              select.custom-select
+              select.selecter
                 option --
                 option Azure
                 option Bentayga
@@ -40,7 +40,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Цвет
-              select.custom-select
+              select.selecter
                 option --
                 option Значение 1
                 option Значение 2
@@ -51,7 +51,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Материал
-              select.custom-select
+              select.selecter
                 option --
                 option Значение 1
                 option Значение 2
@@ -62,16 +62,16 @@
         .form__section-title.h6.color-theme-disabled.mb-4 Цена, ₽
         .row.mb-3
           .form__item.col-6
-            label.form__label.form__label_plain.color-theme-disabled От
+            label.form__label.form__label_plain.h5.color-theme-disabled От
             input#et-min.form__field(type="text" value="")
           .form__item.col-6
-            label.form__label.form__label_plain.color-theme-disabled До
+            label.form__label.form__label_plain.h5.color-theme-disabled До
             input#et-max.form__field(type="text" value="")
         #et-ranger.form__slider
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Наличие
         input.form__toggler.form__toggler_checkbox(id="instock" type="checkbox" value="")
-        label.form__label(for="instock")
+        label.form__label.h5(for="instock")
           +icon('checked','form__label-icon')
           span.form__label-title Сейчас в наличии
       .form__section.border-0.pb-0
@@ -82,82 +82,82 @@
         #brand.form__list.row
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Michelin-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Michelin-1")
+            label.form__label.h5.mb-4(for="Michelin-1")
               +icon('checked','form__label-icon')
               span.form__label-title Michelin
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Cordiant-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Cordiant-1")
+            label.form__label.h5.mb-4(for="Cordiant-1")
               +icon('checked','form__label-icon')
               span.form__label-title Cordiant
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Pirelli-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Pirelli-1")
+            label.form__label.h5.mb-4(for="Pirelli-1")
               +icon('checked','form__label-icon')
               span.form__label-title Pirelli
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Hankook-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Hankook-1")
+            label.form__label.h5.mb-4(for="Hankook-1")
               +icon('checked','form__label-icon')
               span.form__label-title Hankook
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Yokohama-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Yokohama-1")
+            label.form__label.h5.mb-4(for="Yokohama-1")
               +icon('checked','form__label-icon')
               span.form__label-title Yokohama
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Goodyear-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Goodyear-1")
+            label.form__label.h5.mb-4(for="Goodyear-1")
               +icon('checked','form__label-icon')
               span.form__label-title Good year
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Continental-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Continental-1")
+            label.form__label.h5.mb-4(for="Continental-1")
               +icon('checked','form__label-icon')
               span.form__label-title Continental
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Bridgestone-1" type="checkbox" value="")
-            label.form__label.mb-4(for="Bridgestone-1")
+            label.form__label.h5.mb-4(for="Bridgestone-1")
               +icon('checked','form__label-icon')
               span.form__label-title Bridgestone
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Michelin" type="checkbox" value="")
-            label.form__label.mb-4(for="Michelin")
+            label.form__label.h5.mb-4(for="Michelin")
               +icon('checked','form__label-icon')
               span.form__label-title Michelin
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Cordiant" type="checkbox" value="")
-            label.form__label.mb-4(for="Cordiant")
+            label.form__label.h5.mb-4(for="Cordiant")
               +icon('checked','form__label-icon')
               span.form__label-title Cordiant
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Pirelli" type="checkbox" value="")
-            label.form__label.mb-4(for="Pirelli")
+            label.form__label.h5.mb-4(for="Pirelli")
               +icon('checked','form__label-icon')
               span.form__label-title Pirelli
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Hankook" type="checkbox" value="")
-            label.form__label.mb-4(for="Hankook")
+            label.form__label.h5.mb-4(for="Hankook")
               +icon('checked','form__label-icon')
               span.form__label-title Hankook
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Yokohama" type="checkbox" value="")
-            label.form__label.mb-4(for="Yokohama")
+            label.form__label.h5.mb-4(for="Yokohama")
               +icon('checked','form__label-icon')
               span.form__label-title Yokohama
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Goodyear" type="checkbox" value="")
-            label.form__label.mb-4(for="Goodyear")
+            label.form__label.h5.mb-4(for="Goodyear")
               +icon('checked','form__label-icon')
               span.form__label-title Good year
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Continental" type="checkbox" value="")
-            label.form__label.mb-4(for="Continental")
+            label.form__label.h5.mb-4(for="Continental")
               +icon('checked','form__label-icon')
               span.form__label-title Continental
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Bridgestone" type="checkbox" value="")
-            label.form__label.mb-4(for="Bridgestone")
+            label.form__label.h5.mb-4(for="Bridgestone")
               +icon('checked','form__label-icon')
               span.form__label-title Bridgestone
       .d-flex.justify-content-center
@@ -168,4 +168,4 @@
       .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
         .h5.font-weight-normal.mr-2 Найдено:
         | 713
-      button.btn.text-uppercase.btn_bordered.px-3(type="button") Показать
+      button.button.text-uppercase.button_bordered.px-3(type="button") Показать
