--- a/src/pug/base/filter-wheels.pug
+++ b/src/pug/base/filter-wheels.pug
@@ -5,14 +5,14 @@
         .form__title.form__title_icon.text-nowrap.d-flex.align-items-center.h3.font-weight-bold.color-theme-brand.mb-0.mb-lg-2
           +icon('wheels','form__title-icon h3 mr-2')
           | Подбор дисков
-        button.btn-unstyled.h6(type="reset") Сбросить
+        button.button-unstyled.h6(type="reset") Сбросить
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Типоразмер
         .row
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Ширина
-              select.custom-select
+              select.selecter
                 option --
                 option 5
                 option 6.5
@@ -23,7 +23,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Диаметр (R)
-              select.custom-select
+              select.selecter
                 option --
                 option 9.5
                 option 10
@@ -34,7 +34,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Отверстие
-              select.custom-select
+              select.selecter
                 option --
                 option 10
                 option 12
@@ -44,46 +44,46 @@
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Тип диска
         input.form__toggler.form__toggler_checkbox(id="param-1" type="checkbox" value="")
-        label.form__label.mb-4(for="param-1")
+        label.form__label.h5.mb-4(for="param-1")
           +icon('checked','form__label-icon')
           span.form__label-title Кованый
         input.form__toggler.form__toggler_checkbox(id="param-2" type="checkbox" value="")
-        label.form__label.mb-4(for="param-2")
+        label.form__label.h5.mb-4(for="param-2")
           +icon('checked','form__label-icon')
           span.form__label-title Литой
         input.form__toggler.form__toggler_checkbox(id="param-3" type="checkbox" value="")
-        label.form__label(for="param-3")
+        label.form__label.h5(for="param-3")
           +icon('checked','form__label-icon')
           span.form__label-title Стальной
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Тип
         input.form__toggler.form__toggler_checkbox(id="param-4" type="checkbox" value="")
-        label.form__label.mb-4(for="param-4")
+        label.form__label.h5.mb-4(for="param-4")
           +icon('checked','form__label-icon')
           span.form__label-title Для внедорожника
         input.form__toggler.form__toggler_checkbox(id="param-5" type="checkbox" value="")
-        label.form__label.mb-4(for="param-5")
+        label.form__label.h5.mb-4(for="param-5")
           +icon('checked','form__label-icon')
           span.form__label-title Для внедорожника
         input.form__toggler.form__toggler_checkbox(id="param-6" type="checkbox" value="")
-        label.form__label(for="param-6")
+        label.form__label.h5(for="param-6")
           +icon('checked','form__label-icon')
           span.form__label-title Для внедорожника
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Вылет диска, мм
         .row.mb-3
           .form__item.col-6
-            label.form__label.form__label_plain.color-theme-disabled От
+            label.form__label.form__label_plain.h5.color-theme-disabled От
             input#et-min.form__field(type="text" value="")
           .form__item.col-6
-            label.form__label.form__label_plain.color-theme-disabled До
+            label.form__label.form__label_plain.h5.color-theme-disabled До
             input#et-max.form__field(type="text" value="")
         #et-ranger.form__slider
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Применяемость
         .form__select
           .form__select-title Выберете марку
-          select.custom-select
+          select.selecter
             option Audi
             option BMW
             option Cadillac
@@ -94,16 +94,16 @@
         .form__section-title.h6.color-theme-disabled.mb-4 Цена, ₽
         .row.mb-3
           .form__item.col-6
-            label.form__label.form__label_plain.color-theme-disabled От
+            label.form__label.form__label_plain.h5.color-theme-disabled От
             input#price-min.form__field(type="text" value="")
           .form__item.col-6
-            label.form__label.form__label_plain.color-theme-disabled До
+            label.form__label.form__label_plain.h5.color-theme-disabled До
             input#price-max.form__field(type="text" value="")
         #price-ranger.form__slider
       .form__section
         .form__section-title.h6.color-theme-disabled.mb-4 Наличие
         input.form__toggler.form__toggler_checkbox(id="instock" type="checkbox" value="")
-        label.form__label(for="instock")
+        label.form__label.h5(for="instock")
           +icon('checked','form__label-icon')
           span.form__label-title Сейчас в наличии
       .form__section.border-0.pb-0
@@ -114,50 +114,50 @@
         .row
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Michelin" type="checkbox" value="")
-            label.form__label.mb-4(for="Michelin")
+            label.form__label.h5.mb-4(for="Michelin")
               +icon('checked','form__label-icon')
               span.form__label-title Michelin
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Cordiant" type="checkbox" value="")
-            label.form__label.mb-4(for="Cordiant")
+            label.form__label.h5.mb-4(for="Cordiant")
               +icon('checked','form__label-icon')
               span.form__label-title Cordiant
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Pirelli" type="checkbox" value="")
-            label.form__label.mb-4(for="Pirelli")
+            label.form__label.h5.mb-4(for="Pirelli")
               +icon('checked','form__label-icon')
               span.form__label-title Pirelli
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Hankook" type="checkbox" value="")
-            label.form__label.mb-4(for="Hankook")
+            label.form__label.h5.mb-4(for="Hankook")
               +icon('checked','form__label-icon')
               span.form__label-title Hankook
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Yokohama" type="checkbox" value="")
-            label.form__label.mb-4(for="Yokohama")
+            label.form__label.h5.mb-4(for="Yokohama")
               +icon('checked','form__label-icon')
               span.form__label-title Yokohama
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Goodyear" type="checkbox" value="")
-            label.form__label.mb-4(for="Goodyear")
+            label.form__label.h5.mb-4(for="Goodyear")
               +icon('checked','form__label-icon')
               span.form__label-title Good year
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Continental" type="checkbox" value="")
-            label.form__label.mb-4(for="Continental")
+            label.form__label.h5.mb-4(for="Continental")
               +icon('checked','form__label-icon')
               span.form__label-title Continental
           .col-6
             input.form__toggler.form__toggler_checkbox(id="Bridgestone" type="checkbox" value="")
-            label.form__label.mb-4(for="Bridgestone")
+            label.form__label.h5.mb-4(for="Bridgestone")
               +icon('checked','form__label-icon')
               span.form__label-title Bridgestone
       .d-flex.justify-content-center
-        button.btn-unstyled.d-flex.align-items-center(type="submit")
+        button.button-unstyled.d-flex.align-items-center(type="submit")
           span.h6.mr-2 Показать еще
           +icon('readmore','h3 color-theme-brand')
     .aside__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4
       .aside__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
         .h5.font-weight-normal.mr-2 Найдено:
         | 713
-      button.btn.text-uppercase.btn_bordered.px-3(type="button") Показать
+      button.button.text-uppercase.button_bordered.px-3(type="button") Показать
