--- a/src/pug/checkout__delivery.pug
+++ b/src/pug/checkout__delivery.pug
@@ -9,7 +9,7 @@ block checkout
       span.section-counter.h4.rounded-circle.bg-theme-brand.color-theme-white.mr-2
         +icon('checked','color-theme-white')
       .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
-      button.btn.btn_nobg.h5.h-auto.p-0(type="button")
+      button.button.button_nobg.h5.h-auto.p-0(type="button")
         +icon('edit','h3 color-theme-brand mr-sm-2')
         .d-none.d-sm-block Изменить
   form.section.py-0.mb-3(action="#")
@@ -17,7 +17,7 @@ block checkout
       span.section-counter.h4.rounded-circle.bg-theme-brand.color-theme-white.mr-2
         +icon('checked','color-theme-white')
       .h3.flex-grow-1.font-weight-bold.color-theme-brand Покупатель
-      button.btn.btn_nobg.h5.h-auto.p-0(type="button")
+      button.button.button_nobg.h5.h-auto.p-0(type="button")
         +icon('edit','h3 color-theme-brand mr-sm-2')
         .d-none.d-sm-block Изменить
     .desclist.desclist.px-md-4.px-3.py-md-4.py-3
@@ -37,11 +37,11 @@ block checkout
     .form.border-bottom.px-md-4.px-3.pb-md-4.pb-3
       .h6.color-theme-disabled.mb-3 Тип платильщика
       input.form__toggler.form__toggler_checkbox(id="checkout-service-1" type="radio" name="checkout-service" value="")
-      label.form__label.form__label_checkbox.mb-4(for="checkout-service-1")
+      label.form__label.h5.mb-4(for="checkout-service-1")
         +icon('checked','form__label-icon')
         span.form__label-title Физическое лицо
       input.form__toggler.form__toggler_checkbox(id="checkout-service-2" type="radio" name="checkout-service" value="")
-      label.form__label.form__label_checkbox(for="checkout-service-2")
+      label.form__label.h5(for="checkout-service-2")
         +icon('checked','form__label-icon')
         span.form__label-title Юридическое лицо
     .form.border-bottom.pb-md-4.pb-3
@@ -51,7 +51,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-1" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-1")
+            label.form__label.h5(for="checkout-delivery-1")
               span.form__label-title.h6 Самовывоз (0₽)
           .col-sm-7
             .h6.color-theme-disabled Вы можете самостоятельно забрать заказ из нашего магазина по адресу: РнД, ул. Доватора, 11.
@@ -59,7 +59,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-2" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-2")
+            label.form__label.h5(for="checkout-delivery-2")
               span.form__label-title.h6 Доставка ТК для регионов РФ (0₽)
           .col-sm-7
             .h6.color-theme-disabled Бесплатная доставка до Транспортной Компании КИТ в городе отправки.
@@ -67,7 +67,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-3" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-3")
+            label.form__label.h5(for="checkout-delivery-3")
               span.form__label-title.h6 GTD (500₽)
           .col-sm-7
             +img('content/delivery/ctd.png')
@@ -75,7 +75,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-4" type="radio" name="delivery" value="" checked)
-            label.form__label.form__label_dot(for="checkout-delivery-4")
+            label.form__label.h5(for="checkout-delivery-4")
               span.form__label-title.h6 СДЭК (500₽)
           .col-sm-7
               +img('content/delivery/cdek.png')
@@ -83,7 +83,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-5" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-5")
+            label.form__label.h5(for="checkout-delivery-5")
               span.form__label-title.h6 ПЭК (500₽)
           .col-sm-7
             +img('content/delivery/pek.png')
@@ -91,7 +91,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-6" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-6")
+            label.form__label.h5(for="checkout-delivery-6")
               span.form__label-title.h6 Деловые Линии (500₽)
           .col-sm-7
             +img('content/delivery/dl.png')
@@ -99,7 +99,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-8" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-8")
+            label.form__label.h5(for="checkout-delivery-8")
               span.form__label-title.h6 Boxberry (500₽)
           .col-sm-7
             +img('content/delivery/boxberry.png')
@@ -107,12 +107,12 @@ block checkout
         .row.align-items-center
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-9" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-9")
+            label.form__label.h5(for="checkout-delivery-9")
               span.form__label-title.h6 PickPoint (500₽)
           .col-sm-7
             +img('content/delivery/pickpoint.png')
     .px-md-4.px-3.py-3.text-right
-      button.btn.text-uppercase.px-5(type="button") Далее
+      button.button.text-uppercase.px-5(type="button") Далее
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
       span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 3
@@ -120,11 +120,11 @@ block checkout
     .form.border-bottom.px-md-4.px-3.pb-md-4.pb-3
       .h6.color-theme-disabled.mb-3 Тип платильщика
       input.form__toggler.form__toggler_checkbox(id="checkout-service-1" type="radio" name="checkout-service" value="")
-      label.form__label.form__label_checkbox.mb-4(for="checkout-service-1")
+      label.form__label.h5.mb-4(for="checkout-service-1")
         +icon('checked','form__label-icon')
         span.form__label-title Физическое лицо
       input.form__toggler.form__toggler_checkbox(id="checkout-service-2" type="radio" name="checkout-service" value="")
-      label.form__label.form__label_checkbox(for="checkout-service-2")
+      label.form__label.h5(for="checkout-service-2")
         +icon('checked','form__label-icon')
         span.form__label-title Юридическое лицо
     .form.border-bottom.pb-md-4.pb-3
@@ -134,7 +134,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-1" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-1")
+            label.form__label.h5(for="checkout-delivery-1")
               span.form__label-title.h6 Самовывоз (0₽)
           .col-sm-7
             .h6.color-theme-disabled Вы можете самостоятельно забрать заказ из нашего магазина по адресу: РнД, ул. Доватора, 11.
@@ -142,7 +142,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-2" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-2")
+            label.form__label.h5(for="checkout-delivery-2")
               span.form__label-title.h6 Доставка ТК для регионов РФ (0₽)
           .col-sm-7
             .h6.color-theme-disabled Бесплатная доставка до Транспортной Компании КИТ в городе отправки.
@@ -150,7 +150,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-3" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-3")
+            label.form__label.h5(for="checkout-delivery-3")
               span.form__label-title.h6 GTD (500₽)
           .col-sm-7
             +img('content/delivery/ctd.png')
@@ -158,49 +158,49 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-4" type="radio" name="delivery" value="" checked)
-            label.form__label.form__label_dot(for="checkout-delivery-4")
+            label.form__label.h5(for="checkout-delivery-4")
               span.form__label-title.h6 СДЭК (500₽)
           .d-flex.flex-wrap.align-items-center.col-sm-7.px-0
             .col-md-4.mb-3.mb-md-0
               +img('content/delivery/cdek.png')
             .col-md-8
               .form__select
-                select.custom-select
+                select.selecter
                   option Доставка по адресу
                   option Значение 1
                   option Значение 2
                   option Значение 3
         .form__item.mb-4
           .form__select
-            select.custom-select
+            select.selecter
               option Страна
               option Россия
               option Армения
               option Казахстан
         .form__item.mb-4
           .form__select
-            select.custom-select
+            select.selecter
               option Область / край
               option Ростовская обл.
               option Краснодарский кр.
               option Ставропольский кр.
         .form__item.mb-4
           .form__select
-            select.custom-select
+            select.selecter
               option Город
               option Ростов-на-Дону
               option Краснодар
               option Ставрополь
         .form__item.mb-4
           .form__select
-            select.custom-select
+            select.selecter
               option Улица
               option Ленина
               option Б. Садовая
               option Сарьяна
         .form__item.mb-4
           .form__select
-            select.custom-select
+            select.selecter
               option Дом
               option 34
               option 35
@@ -210,7 +210,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-5" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-5")
+            label.form__label.h5(for="checkout-delivery-5")
               span.form__label-title.h6 ПЭК (500₽)
           .col-sm-7
             +img('content/delivery/pek.png')
@@ -218,7 +218,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-6" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-6")
+            label.form__label.h5(for="checkout-delivery-6")
               span.form__label-title.h6 Деловые Линии (500₽)
           .col-sm-7
             +img('content/delivery/dl.png')
@@ -226,7 +226,7 @@ block checkout
         .row.align-items-center.mb-4
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-8" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-8")
+            label.form__label.h5(for="checkout-delivery-8")
               span.form__label-title.h6 Boxberry (500₽)
           .col-sm-7
             +img('content/delivery/boxberry.png')
@@ -234,12 +234,12 @@ block checkout
         .row.align-items-center
           .col-sm-5.mb-2.mb-sm-0
             input.form__toggler.form__toggler_dot(id="checkout-delivery-9" type="radio" name="delivery" value="")
-            label.form__label.form__label_dot(for="checkout-delivery-9")
+            label.form__label.h5(for="checkout-delivery-9")
               span.form__label-title.h6 PickPoint (500₽)
           .col-sm-7
             +img('content/delivery/pickpoint.png')
     .px-md-4.px-3.py-3.text-right
-      button.btn.text-uppercase.px-5(type="button") Далее
+      button.button.text-uppercase.px-5(type="button") Далее
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
       span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 4
