--- a/src/pug/libs/mixins.pug
+++ b/src/pug/libs/mixins.pug
@@ -16,7 +16,7 @@ mixin icon(icon__name, icon__classname)
 
 mixin radio(radio__index=1, radio__title, radio__checked, radio__name="filter-radio", radio__labelclassmod)
   input.form__toggler.form__toggler_radio(id=`filter-radio-${radio__index}` name=radio__name type="radio" value="" checked=radio__checked)
-  label.form__label(class=radio__labelclassmod for=`filter-radio-${radio__index}`)!= radio__title
+  label.form__label.h5(class=radio__labelclassmod for=`filter-radio-${radio__index}`)!= radio__title
 
 mixin leftmenu(leftmenu__title, leftmenu__icon, leftmenu__badge, leftmenu__badge_text, leftmenu__badge_extratext=false)
   a.leftmenu__item.d-flex.align-items-center.h4(href="https://don-shina.ru")
@@ -47,7 +47,7 @@ mixin banner(banner__img, banner__noshadow=false, banner__classmod="card_sm", ba
         +img(banner__img,'img-cover')
         .banner__inner.d-flex.flex-column.align-items-center.justify-content-between.px-3.py-4
           .banner__title.h1.font-weight-bold.color-theme-brand!= banner__title
-          a.btn.text-uppercase(href="#") Записаться
+          a.button.text-uppercase(href="#") Записаться
     else
       a.card__picture.h-100(href="#")
         +img(banner__img,'img-cover')
@@ -162,7 +162,7 @@ mixin card(card__price_old, card__price_new, card__title="Зимние шины 
             button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
             .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
             button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
-          a.btn.text-uppercase(href="#") В корзину
+          a.button.text-uppercase(href="#") В корзину
         if (card__oneclick)
           button.card__btn.card__btn_link.w-100(type="button")
             +icon('plane','h4 color-theme-brand d-flex flex-column align-items-center justify-content-center mr-1')
