--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -25,7 +25,7 @@ block wrapper
                 .col-lg-2.offset-lg-2
                   .form__select.mb-4
                     .form__select-title Ширина
-                    select.custom-select
+                    select.selecter
                       option --
                       option 5
                       option 6.5
@@ -38,7 +38,7 @@ block wrapper
                 .col-lg-2
                   .form__select.mb-4
                     .form__select-title Высота
-                    select.custom-select
+                    select.selecter
                       option --
                       option 9.5
                       option 10
@@ -51,7 +51,7 @@ block wrapper
                 .col-lg-2
                   .form__select.mb-4
                     .form__select-title Диаметр
-                    select.custom-select
+                    select.selecter
                       option --
                       option 10
                       option 12
@@ -61,41 +61,41 @@ block wrapper
               .row
                 .form__row.col-lg-8.offset-lg-2
                   input.form__toggler.form__toggler_checkbox(id="tires-checkbox-1" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.mb-4(for="tires-checkbox-1")
+                  label.form__label.h5.mb-4(for="tires-checkbox-1")
                     +icon('checked','form__label-icon')
                     span.icon-marker.h4.ds-icon-allseason.mr-2
                       span.path1
                       span.path2
                     span.form__label-title Всесезонные
                   input.form__toggler.form__toggler_checkbox(id="tires-checkbox-2" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.mb-4(for="tires-checkbox-2")
+                  label.form__label.h5.mb-4(for="tires-checkbox-2")
                     +icon('checked','form__label-icon')
                     +icon('summer','icon-marker h4 mr-2')
                     span.form__label-title Летние
                   input.form__toggler.form__toggler_checkbox.form__toggler_param_winter(id="tires-checkbox-3" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.mb-4(for="tires-checkbox-3")
+                  label.form__label.h5.mb-4(for="tires-checkbox-3")
                     +icon('checked','form__label-icon')
                     +icon('winter','icon-marker h4 mr-2')
                     span.form__label-title Зимние
                   input.form__toggler.form__toggler_checkbox.form__toggler_param_spykes(id="tires-checkbox-4" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.d-none.mb-4(for="tires-checkbox-4")
+                  label.form__label.h5.d-none.mb-4(for="tires-checkbox-4")
                     +icon('checked','form__label-icon')
                     +icon('spikes','icon-marker h4 mr-2')
                     span.form__label-title Шипы
                   input.form__toggler.form__toggler_checkbox.form__toggler_param_spykes(id="tires-checkbox-5" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.d-none.mb-4(for="tires-checkbox-5")
+                  label.form__label.h5.d-none.mb-4(for="tires-checkbox-5")
                     +icon('checked','form__label-icon')
                     +icon('nonspikes','icon-marker h4 mr-2')
                     span.form__label-title Без шипов
                 .col-md-8.offset-md-2.text-center
-                  a.btn.text-uppercase.px-4(href="#") подобрать
+                  a.button.text-uppercase.px-4(href="#") подобрать
             form.form.tab-pane.fade(id="filter-wheels" role="tabpanel" action="#")
               .row
                 .form__row.col-lg-10.offset-lg-1
                   .form__col.pr-md-4.pr-xl-0
                     .form__select.mb-4
                       .form__select-title Диаметр
-                      select.custom-select
+                      select.selecter
                         option --
                         option 10
                         option 12
@@ -104,7 +104,7 @@ block wrapper
                   .form__col.pr-md-4.pr-xl-0
                     .form__select.mb-4
                       .form__select-title Ширина
-                      select.custom-select
+                      select.selecter
                         option --
                         option 5
                         option 6.5
@@ -115,7 +115,7 @@ block wrapper
                   .form__col.pr-md-4.pr-xl-0
                     .form__select.mb-4
                       .form__select-title Отверстий
-                      select.custom-select
+                      select.selecter
                         option --
                         option 3
                         option 4
@@ -126,7 +126,7 @@ block wrapper
                   .form__col.pr-md-4.pr-xl-0
                     .form__select.mb-4
                       .form__select-title PCD
-                      select.custom-select
+                      select.selecter
                         option --
                         option 98
                         option 10
@@ -136,129 +136,61 @@ block wrapper
                         option 110
                 .form__row.col-lg-6.offset-lg-3.col-md-8.offset-md-2
                   input.form__toggler.form__toggler_checkbox(id="wheels-checkbox-11" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.mb-4(for="wheels-checkbox-11")
+                  label.form__label.h5.mb-4(for="wheels-checkbox-11")
                     +icon('checked','form__label-icon')
                     +icon('iron','icon-marker h3 mr-2')
                     span.form__label-title Кованые
                   input.form__toggler.form__toggler_checkbox(id="wheels-checkbox-21" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.mb-4(for="wheels-checkbox-21")
+                  label.form__label.h5.mb-4(for="wheels-checkbox-21")
                     +icon('checked','form__label-icon')
                     span.icon-marker.h3.ds-icon-founding.mr-2
                       span.path1
                       span.path2
                     span.form__label-title Литые
                   input.form__toggler.form__toggler_checkbox(id="wheels-checkbox-31" type="checkbox" value="")
-                  label.form__label.form__label_checkbox.mb-4(for="wheels-checkbox-31")
+                  label.form__label.h5.mb-4(for="wheels-checkbox-31")
                     +icon('checked','form__label-icon')
                     span.icon-marker.h3.ds-icon-steel.mr-2
                       span.path1
                       span.path2
                     span.form__label-title Стальные
                 .col-md-10.offset-md-1.text-center
-                  a.btn.text-uppercase.px-4(href="#") подобрать
+                  a.button.text-uppercase.px-4(href="#") подобрать
             form.form.tab-pane.fade(id="filter-cars" role="tabpanel" action="#")
               .row
                 .form__row.col-lg-10.offset-lg-1
-                  .form__col.pr-md-4.pr-xl-0
-                    .dropdown.mb-4
-                      //- select.d-none
-                        option Значение 1
-                        option Значение 2
-                        option Значение 3
-                        option Значение 4
-                        option Значение 5
-                      button.dropdown-toggle(id="filter-cars-dropdown-1" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Выберете марку
-                      .dropdown-menu(aria-labelledby="filter-cars-dropdown-1")
-                        .dropdown-menu__header.mb-2
-                          input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
-                        .dropdown-menu__body
-                          ul.dropdown-menu__list
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 1
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 2
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 3
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option.selected(role="option") Значение 4
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 5
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 1
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 2
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 3
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 4
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 5
-                  .form__col.pr-md-4.pr-xl-0
-                    .dropdown.mb-4
-                      //- select.d-none
-                        option Значение 1
-                        option Значение 2
-                        option Значение 3
-                        option Значение 4
-                        option Значение 5
-                      button.dropdown-toggle(id="filter-cars-dropdown-2" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Модель
-                      .dropdown-menu(aria-labelledby="filter-cars-dropdown-2")
-                        .dropdown-menu__header.mb-2
-                          input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
-                        .dropdown-menu__body
-                          ul.dropdown-menu__list
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 1
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 2
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 3
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option.selected(role="option") Значение 4
-                  .form__col.pr-md-4.pr-xl-0
-                    .dropdown.mb-4
-                      //- select.d-none
-                        option Значение 1
-                        option Значение 2
-                        option Значение 3
-                        option Значение 4
-                        option Значение 5
-                      button.dropdown-toggle(id="filter-cars-dropdown-3" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Кузов
-                      .dropdown-menu(aria-labelledby="filter-cars-dropdown-3")
-                        .dropdown-menu__header.mb-2
-                          input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
-                        .dropdown-menu__body
-                          ul.dropdown-menu__list
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 1
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 2
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 3
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option.selected(role="option") Значение 4
-                  .form__col.pr-md-4.pr-xl-0
-                    .dropdown.mb-4
-                      //- select.d-none
-                        option Значение 1
-                        option Значение 2
-                        option Значение 3
-                        option Значение 4
-                        option Значение 5
-                      button.dropdown-toggle(id="filter-cars-dropdown-4" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Двигатель
-                      .dropdown-menu(aria-labelledby="filter-cars-dropdown-4")
-                        .dropdown-menu__header.mb-2
-                          input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
-                        .dropdown-menu__body
-                          ul.dropdown-menu__list
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 1
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 2
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option(role="option") Значение 3
-                            li.dropdown-menu__list-item
-                              a.dropdown-menu__list-option.selected(role="option") Значение 4
+                  .form__col.pr-md-4.pr-xl-0.pos-rel.mb-4
+                    .form__select-title Выберете марку
+                    select.selecter(data-live-search="true")
+                      option Значение 1
+                      option Значение 2
+                      option Значение 3
+                      option Значение 4
+                      option Значение 5
+                  .form__col.pr-md-4.pr-xl-0.pos-rel.mb-4
+                    .form__select-title Модель
+                    select.selecter(data-live-search="true" disabled)
+                      option Значение 1
+                      option Значение 2
+                      option Значение 3
+                      option Значение 4
+                      option Значение 5
+                  .form__col.pr-md-4.pr-xl-0.pos-rel.mb-4
+                    .form__select-title Кузов
+                    select.selecter(data-live-search="true" disabled)
+                      option Значение 1
+                      option Значение 2
+                      option Значение 3
+                      option Значение 4
+                      option Значение 5
+                  .form__col.pr-md-4.pr-xl-0.pos-rel.mb-4
+                    .form__select-title Двигатель
+                    select.selecter(data-live-search="true" disabled)
+                      option Значение 1
+                      option Значение 2
+                      option Значение 3
+                      option Значение 4
+                      option Значение 5
                   .col-lg-10.offset-lg-1
                     .form__title.mb-3 Наиболее популярные:
                     .text-center.mb-1
@@ -310,8 +242,8 @@ block wrapper
                     span.result-item__title.px-xl-3.px-lg-2.px-1 Honda CR-V Car Sport внедорожник Toyota RAV4
               .row
                 .col-lg-10.offset-lg-1.d-flex.flex-sm-row.flex-column.align-items-center.justify-content-sm-around.justify-content-center
-                  a.btn.text-uppercase.px-4.mb-4.mb-sm-0(href="#") подобрать шины
-                  a.btn.text-uppercase.px-4(href="#") подобрать Диски
+                  a.button.text-uppercase.px-4.mb-4.mb-sm-0(href="#") подобрать шины
+                  a.button.text-uppercase.px-4(href="#") подобрать Диски
 
         .row.mb-5
           .col-lg-7.mb-5.mb-lg-0
@@ -334,7 +266,7 @@ block wrapper
               +img('content/banners/banner-1.jpg','img-cover')
               .banner__inner.d-flex.flex-column.align-items-center.justify-content-between.px-3.py-4
                 .banner__title.banner__title_sm.h1.text-uppercase.font-weight-bold.color-theme-brand Запись на шиномонтаж онлайн
-                a.btn.text-uppercase(href="#") Записаться
+                a.button.text-uppercase(href="#") Записаться
 
         .tabs.mb-5
           ul.nav.nav-tabs.d-flex.align-items-center.p-0.m-0(role="tablist")
@@ -400,7 +332,7 @@ block wrapper
               +img('content/banners/banner-2.jpg','img-cover')
               .banner__inner.banner__inner_offset.d-flex.flex-column.align-items-center.justify-content-between
                 .banner__title.h1.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
-                a.btn.text-uppercase(href="#") Подобрать
+                a.button.text-uppercase(href="#") Подобрать
 
         .section.d-flex.flex-wrap.px-3.mb-5
           .col-lg-4.d-flex.flex-column.pl-lg-5.pr-lg-0.px-sm-4
