--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -16,7 +16,7 @@ block personal
         .col-xl-7.mb-3.mb-xl-0
           .h6.color-theme-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
         .col-xl-5.d-flex.justify-content-xl-end
-          button.btn.text-uppercase(type="button") Оформить заказ
+          button.button.text-uppercase(type="button") Оформить заказ
 
   .h2.font-weight-bold.text-center.mb-4 Результаты подбора по VIN-коду
   .section.py-0.mb-3
@@ -47,11 +47,11 @@ block personal
         .col-xl-7.mb-3.mb-xl-0
           .h6.color-theme-disabled После оформления заказа с вами свяжется наш менеджер для уточнения деталей.
         .col-xl-5.d-flex.justify-content-xl-end
-          button.btn.text-uppercase(type="button") Оформить заказ
+          button.button.text-uppercase(type="button") Оформить заказ
 
   .section.py-0.mb-5
     .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
-      button.btn.btn_nobg.h4.p-0(type="button")
+      button.button.button_nobg.h4.p-0(type="button")
         +icon('settings','color-theme-brand h3 mr-2')
         span.color-theme-brand Подобрать по VIN
       span.section__readmore.readmore.d-block.color-theme-brand
@@ -90,7 +90,7 @@ block personal
           .col-xl-7.mb-3.mb-xl-0
             .h6.color-theme-disabled *-поля обязательные для заполнения
           .col-xl-5.d-flex.justify-content-xl-end
-            button.btn.text-uppercase.px-5(type="submit") Отправить запрос
+            button.button.text-uppercase.px-5(type="submit") Отправить запрос
 
   .mb-5
     .h2.font-weight-bold.text-center.mb-4 История подборов по VIN-коду
