--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -49,7 +49,7 @@ block wrapper
           .aside__wrapper
             .section.section_filter.bg-theme-white.py-0.mb-lg-3
               .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
-                button.btn.btn_nobg.h4.p-0(type="button")
+                button.button.button_nobg.h4.p-0(type="button")
                   +icon('settings','color-theme-brand h3 mr-2')
                   span.color-theme-brand Подобрать по VIN
                 span.section__readmore.readmore.d-none.d-lg-block.color-theme-brand
@@ -88,12 +88,12 @@ block wrapper
                     .col-xl-7.mb-3.mb-xl-0
                       .h6.color-theme-disabled *-поля обязательные для заполнения
                     .col-xl-5.d-flex.justify-content-xl-end
-                      button.btn.text-uppercase.px-5(type="submit") Отправить запрос
+                      button.button.text-uppercase.px-5(type="submit") Отправить запрос
         form.form.mb-3(action="#")
           .row.justify-content-end
             .col-xl-2.col-md-3.order-3.order-md-2
               .form__select
-                select.custom-select
+                select.selecter
                   option Сортировать
                   option По умолчанию
                   option По возрастанию цены
@@ -144,7 +144,7 @@ block wrapper
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
             .text-center.text-md-left
-              button.btn.text-uppercase.px-3(type="submit") В корзину
+              button.button.text-uppercase.px-3(type="submit") В корзину
         form.table-row.table-row_subcategory.box-shadow.border-radius.p-3.mb-md-2.mb-3(action="#" itemscope itemtype="http://schema.org/Product")
           span.d-none(itemtype="http://schema.org/AggregateOffer" itemscope itemprop="offers")
             meta(itemprop="availability" content="http://schema.org/InStock")
@@ -180,7 +180,7 @@ block wrapper
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
             .text-center.text-md-left
-              button.btn.text-uppercase.px-3(type="submit") В корзину
+              button.button.text-uppercase.px-3(type="submit") В корзину
         form.table-row.table-row_subcategory.box-shadow.border-radius.p-3.mb-md-2.mb-3(action="#" itemscope itemtype="http://schema.org/Product")
           span.d-none(itemtype="http://schema.org/AggregateOffer" itemscope itemprop="offers")
             meta(itemprop="availability" content="http://schema.org/InStock")
@@ -216,7 +216,7 @@ block wrapper
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
             .text-center.text-md-left
-              button.btn.text-uppercase.px-3(type="submit") В корзину
+              button.button.text-uppercase.px-3(type="submit") В корзину
         form.table-row.table-row_subcategory.box-shadow.border-radius.p-3.mb-md-2.mb-3(action="#" itemscope itemtype="http://schema.org/Product")
           span.d-none(itemtype="http://schema.org/AggregateOffer" itemscope itemprop="offers")
             meta(itemprop="availability" content="http://schema.org/InStock")
@@ -252,7 +252,7 @@ block wrapper
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
             .text-center.text-md-left
-              button.btn.text-uppercase.px-3(type="submit") В корзину
+              button.button.text-uppercase.px-3(type="submit") В корзину
         form.table-row.table-row_subcategory.box-shadow.border-radius.p-3.mb-md-2.mb-3(action="#" itemscope itemtype="http://schema.org/Product")
           span.d-none(itemtype="http://schema.org/AggregateOffer" itemscope itemprop="offers")
             meta(itemprop="availability" content="http://schema.org/InStock")
@@ -286,7 +286,7 @@ block wrapper
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
             .text-center.text-md-left
-              button.btn.text-uppercase.px-3(type="submit") В корзину
+              button.button.text-uppercase.px-3(type="submit") В корзину
         form.table-row.table-row_subcategory.box-shadow.border-radius.p-3.mb-md-2.mb-3(action="#" itemscope itemtype="http://schema.org/Product")
           span.d-none(itemtype="http://schema.org/AggregateOffer" itemscope itemprop="offers")
             meta(itemprop="availability" content="http://schema.org/InStock")
@@ -320,7 +320,7 @@ block wrapper
               .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
               button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
             .text-center.text-md-left
-              button.btn.text-uppercase.px-3(type="submit") В корзину
+              button.button.text-uppercase.px-3(type="submit") В корзину
         nav.pagination
           a.pagination__item.pagination__item_prev(href="#")
             +icon('readmore-right','h3 color-theme-brand')
