--- a/src/scss/tpl/_dropdown.scss
+++ b/src/scss/tpl/_dropdown.scss
@@ -1,82 +1,142 @@
 .dropdown {
-  @extend %zi-1;
+  @extend %zi-2;
 
   &.show {
-    z-index: 2;
+    z-index: 3;
+
+    .dropdown-toggle {
+      padding-left: 1.75rem;
+      box-shadow: none;
+      border-radius: .25rem .25rem 0 0;
+
+      &:before {
+        display: none;
+      }
+
+      &:after {
+        display: none;
+      }
+    }
+
+    .dropdown-menu {
+      display: block;
+    }
+  }
+
+  &.disabled {
+    opacity: .5;
+
+    .filter-option-inner-inner {
+      color: $color__disabled;
+    }
   }
 }
 
 .dropdown-toggle {
-  @extend .fs-dropdown-selected;
-  color: $color__text_default;
+  @extend %btn-default;
+  @include before;
+  @include fs-lh(.75rem,1rem);
+  width: 100%;
+  padding: .25rem 2.188rem .25rem .875rem;
+  overflow: hidden;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  border-radius: .25rem;
+  color: $color__brand;
+  background: $color__light;
+  transition: all .3s ease;
+  box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, .16);
 
-  &[disabled] {
-    opacity: .5;
+  &:before {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    bottom: 2px;
+    width: 28px;
+    border-radius: .25rem;
+    background: #fff;
+    box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, .12);
+  }
+
+  &:after {
+    @include border(6px 6px 0,$color__brand rgba(0,0,0,0) rgba(0,0,0,0));
+    content: '';
+    position: absolute;
+    top: 10px;
+    right: 9px;
   }
 }
 
 .dropdown-menu {
+  position: absolute;
+  left: 0;
+  right: 0;
   display: none;
-  overflow: hidden;
-  padding: .75rem 1rem;
-  border-radius: .25rem;
-  background: #fff;
-  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
-
-  &.show {
-    right: 0;
-    display: block;
-  }
-
-  &[x-placement="bottom-start"] {
-    transform: none !important;
-  }
-
-  &[x-placement="top-start"] {
-    top: auto !important;
-  }
-}
-
-.dropdown__field {
-  @include h6;
-  @include wh(100%,25px);
-  border: 0;
-  padding: .125rem .375rem;
-  border-radius: .5rem;
-  background: $color__light;
-}
-
-.dropdown-menu__list {
-  @extend %list-default;
-  height: 100%;
-  max-height: 184px;
-  margin: 0 -1rem;
   overflow: auto;
+  max-height: 182px;
+  border-radius: 0 0 .25rem .25rem;
+  box-shadow: 1px 8px 8px 0 rgba(0, 0, 0, .1);
 
-  @include media-breakpoint-up(md) {
-    margin-right: -2rem;
+  &.inner {
+    max-height: 100%;
+    position: static;
+    overflow: visible;
+    border-radius: 0;
+    box-shadow: none;
   }
-}
 
-.dropdown-menu__list-item {
-}
+  .bs-searchbox {
+    padding: .5rem 1rem;
+    background: $color__light;
 
-.dropdown-menu__list-option {
-  @extend .fs-dropdown-item;
-  border-radius: 0 !important;
-  background-color: rgba(0,0,0,0);
+    .form-control {
+      @extend .form__field;
+      background-color: #fff;
+    }
+  }
 
-  &:hover,
-  &:focus {
+  .no-results {
+    @include h6;
+    padding: .5rem 1rem;
+    background: $color__light;
+  }
+
+  .text {
+    @include h5;
+    @extend %btn-default;
+    @include before;
+    padding: .125rem 1.5rem .125rem 1.75rem;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    text-align: left;
     color: $color__brand;
+    background: $color__light;
   }
 
-  &.selected {
-    @extend .fs-dropdown-item.fs-dropdown-item_selected;
-
-    &:hover,
-    &:focus {
+  .selected {
+    .text {
       color: #fff;
+      background: $color__brand;
+
+      &:before {
+        @include pos(4px,6px);
+        @include wh(20px,2px);
+        background: #fff;
+        transform: rotate(-45deg);
+        transform-origin: bottom right;
+      }
+
+      &:after {
+        @include pos(11px,4px);
+        @include wh(10px,2px);
+        content: '';
+        background: #fff;
+        transform: rotate(45deg);
+        transform-origin: bottom left;
+      }
     }
   }
 }
