--- a/src/scss/tpl/_selecter.scss
+++ b/src/scss/tpl/_selecter.scss
@@ -1,119 +1,5 @@
-.fs-dropdown {
-  @extend %zi-2;
-
-  &.fs-dropdown-open {
-    z-index: 3;
-
-    .fs-dropdown-selected {
-      padding-left: 1.75rem;
-      box-shadow: none;
-      border-radius: .25rem .25rem 0 0;
-
-      &:before {
-        display: none;
-      }
-
-      &:after {
-        display: none;
-      }
-    }
-
-    .fs-dropdown-options {
-      display: block;
-    }
-  }
-}
-
-.fs-dropdown-selected {
-  @extend %btn-default;
-  @include before;
-  @include fs-lh(.75rem,1rem);
-  width: 100%;
-  padding: .25rem 2.188rem .25rem .875rem;
-  overflow: hidden;
-  text-align: left;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  border-radius: .25rem;
-  color: $color__brand;
-  background: $color__light;
-  transition: all .3s ease;
-  box-shadow: inset 1px 1px 4px 0 rgba(0, 0, 0, .16);
-
-  &:before {
-    position: absolute;
-    top: 2px;
-    right: 2px;
-    bottom: 2px;
-    width: 28px;
-    border-radius: .25rem;
-    background: #fff;
-    box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, .12);
-  }
-
-  &:after {
-    @include border(6px 6px 0,$color__brand rgba(0,0,0,0) rgba(0,0,0,0));
-    content: '';
-    position: absolute;
-    top: 10px;
-    right: 9px;
-  }
-}
-
-.fs-dropdown-options {
-  @include before;
-  position: absolute;
-  left: 0;
-  right: 0;
-  display: none;
-  overflow: auto;
-  max-height: 182px;
-  border-radius: 0 0 .25rem .25rem;
-  box-shadow: 1px 8px 8px 0 rgba(0, 0, 0, .1);
-}
-
-.fs-dropdown-item {
-  @include h5;
-  @extend %btn-default;
-  @include before;
-  padding: .125rem 1.5rem .125rem 1.75rem;
-  width: 100%;
-  display: block;
-  overflow: hidden;
-  text-align: left;
-  color: $color__brand;
-  background: $color__light;
-
-  /*
-  @include media-breakpoint-up(md) {
-    @include h5;
-  }
-
-  @include media-breakpoint-down(sm) {
-    @include fs-lh(1rem,1.375rem);
-  }
-  */
-
-  &.fs-dropdown-item_selected {
-    color: #fff;
-    background: $color__brand;
-
-    &:before {
-      @include pos(4px,6px);
-      @include wh(20px,2px);
-      background: #fff;
-      transform: rotate(-45deg);
-      transform-origin: bottom right;
-    }
-
-    &:after {
-      @include pos(11px,4px);
-      @include wh(10px,2px);
-      content: '';
-      background: #fff;
-      transform: rotate(45deg);
-      transform-origin: bottom left;
-    }
+.selecter {
+  .selecter {
+    display: none;
   }
 }
